# nano-vllm-ascend

./: README.md  bench.py  example.py  pyproject.toml
bench/: bench.py  serving_bench.py
bench_log/: Qwen2-0.5B.txt  mm_example_result.txt
docs/: inference_optimization_guide.md  pageattention_comparison.md
docs/engine/: block_manager_flowchart.md  llm_engine_flowchart.md  model_runner_flowchart.md  scheduler_flowchart.md  sequence_flowchart.md
docs/layers/: activation_flowchart.md  attention_flowchart.md  attention_ori_flowchart.md  attention_torch_native_flowchart.md  embed_head_flowchart.md  layernorm_flowchart.md  linear_flowchart.md  rotary_embedding_flowchart.md  sampler_flowchart.md
docs/models/: llama_flowchart.md  mini_cpm4_flowchart.md  models_map_flowchart.md  qwen3_flowchart.md  qwen3_moe_flowchart.md  qwen3_vl_flowchart.md
example/: automatic_prefix_caching.py  example.py  example_multimodal.py
nanovllm/: config.py  llm.py
nanovllm/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
nanovllm/layers/: attention.py  attention_ori.py  attention_torch_native.py  rotary_embedding.py  sampler.py
nanovllm/models/: llama.py  mini_cpm4.py  models_map.py  qwen3_moe.py  qwen3_vl.py
nanovllm/utils/: arg_utils.py  context.py  loader.py  logger.py
op_docs/: _op_plugin_docs.py  custom_ops.py
ut/: test_block_manager.py  test_multi_rank_block_manager.py  test_scheduler.py
