[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm-ascend"
version = "1.0.0"
authors = [{ name = "linziming" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.5.1",
    "transformers>=4.51.0",
    "xxhash",
]

[project.urls]
Homepage=""

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm*"]
