[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm-ascend"
version = "0.1.0"
authors = [{ name = "linziming" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.5.1",
    "transformers>=5.0.0",
    "xxhash",
    "mistral_common>=1.9.0",
]

[project.urls]
Homepage="https://github.com/linzm1007/nano-vllm-ascend"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm*"]
